Header text added and two images downloaded
Header text added and two images downloaded to use in the main body of the website

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,8 @@
+body {
+    font-family: eb garamond, merriweather, cormorant garibond;
+
 header {
     background-color: black;
-    color: yellow;
+    color: gold;
+    text-align: center;
 }
