--- a/views/Partials/header.ejs
+++ b/views/Partials/header.ejs
@@ -9,5 +9,9 @@
 </head>
 <body>
     <header>
-        <p>Character Challenge - Game of Thrones Edition!</p>
+        <br />
+        <h1>Character Challenge</h1>
+        <br />
+        <h3>Game of Thrones Edition!</h3>
+        <br />
     </header>
