--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,5 +9,6 @@
 </head>
 <body>
     <header>
-        <p>Character Challenge - Game of Thrones Edition!</p>
+        <h1>Character Challenge</h1>
+        <h2>Game of Thrones Edition!</h2>
     </header>
