--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,11 @@
 <div id="fireDiv">
     <div id="introTextBox">
         <!-- Going to add a yellow background box here and superimpose what I have put below on top of it.-->
-        <h2>Fire</h2>
+        <h2><span><b>Fire</b></span></h2>
         <h5>Up your skills</h5>
         <h5>Do you know your game of thrones characters?</h5>
         <h5>Click on the button below to generate a character</h5>
-        <button>Generate</button>
+        <button id="charButton">Generate</button>
         <!-- Now need to add the functionality in the index.js to pull from the API and generate the character.  Will have an ice photo below 
          and add a box generating the character details on top of it.-->
     </div>
