--- a/public/styles.css
+++ b/public/styles.css
@@ -21,7 +21,30 @@ header {
     position: relative;
 }
 
+#characterDiv {
+    background-color: black;
+    background-size: cover;
+    background-position: center;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 300px; /* Optional minimum height */
+    height: auto;
+    position: relative;
+}
+
 #introTextBox {
+    background-color: goldenrod;
+    width: 45%;
+    max-height: 80%;
+    overflow-y: auto;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+}
+
+#characterScreen {
     background-color: goldenrod;
     width: 45%;
     max-height: 80%;
@@ -34,6 +57,10 @@ header {
 #charButton {
     background-color: black;
     color: white;
+}
+
+li {
+    text-align: left;
 }
 
 /*MAKE SURE WORKS ON DIFFERENT SCREEN SIZES.  NEED TO DO THINGS LIKE SHRINKING TEXT FOR SMALLER SCREENS*/
