API code written to use external function

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,23 +10,20 @@
         <form action="/" method="POST">
             <button id="charButton" type="submit">Generate</button>
         </form>
-        <!-- Now need to add the functionality in the index.js to pull from the API and generate the character.  Will have an ice photo below 
-         and add a box generating the character details on top of it.-->
     </div>
 </div>
 
 <div id="characterDiv">
 <div id="characterScreen">
     <!-- placeholder text here for before character is generated, and then box populated when the character is generated. -->
-     <% if (!locals.character) { %>
+    <% if (!characterData || !characterData.name) { %>
      <h2><span><b>Character not yet generated</b></span></h2> 
      <% } else { %>
-     <li><h6><span><b>Name:</b></span> <%= name %></h6></li>
-     <li><h6><span><b>Gender:</b></span> <%= gender %></h6></li>
-     <li><h6><span><b>Born:</b></span> <%= DOB %></h6></li>
-     <li><h6><span><b>Died:</b></span> <%= died %></h6></li>
-     <li><h6><span><b>Aliases:</b></span> <%= nicknames.join(", ") %></h6></li>
-     }
-
+        <li><h6><span><b>Name:</b></span> <%= characterData.name %></h6></li>
+        <li><h6><span><b>Gender:</b></span> <%= characterData.gender %></h6></li>
+        <li><h6><span><b>Born:</b></span> <%= characterData.DOB %></h6></li>
+        <li><h6><span><b>Died:</b></span> <%= characterData.died %></h6></li>
+        <li><h6><span><b>Aliases:</b></span> <%= characterData.nicknames.join(", ") %></h6></li>
+        <% } %> 
 </div>
 </div>
