--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,3 +27,7 @@
         <% } %> 
 </div>
 </div>
+
+<div id="iceDiv">
+    <!-- Going to put my ice picture in here and my user comment form, and the section to show the user's comment on the screen, below it-->
+</div>
