--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,4 +30,11 @@
 
 <div id="iceDiv">
     <!-- Going to put my ice picture in here and my user comment form, and the section to show the user's comment on the screen, below it-->
+<div id="userInputScreen">
+    <h2><span><b>Unfreeze</b></span></h2>
+        <h5>Your brain</h5>
+        <h5>What do you know about this character?</h5>
+        <h6>Add a fact in the box below and click the submit button.</h6>
+        <h6>If you don't know one, this is your chance to learn.  Do an online search to find out about them.</h6>
+</div>
 </div>
