User fact box added
Form added to enter user fact in form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,6 +35,14 @@
         <h5>Your brain</h5>
         <h5>What do you know about this character?</h5>
         <h6>Add a fact in the box below and click the submit button.</h6>
+        <h6>Your fact will appear in the character box above.</h6>
         <h6>If you don't know one, this is your chance to learn.  Do an online search to find out about them.</h6>
+</br>
+    <div id="userFact">
+        <form action="/submit" method="POST">
+            <h4><span><b><label for="fact">Fact:</label></b></span></h4>
+            <input type="text" id="fact" name="fact" required>
+        </form>
+    </div>
 </div>
 </div>
