Submit button added
Submit button added to userFact form

--- a/public/styles.css
+++ b/public/styles.css
@@ -77,7 +77,7 @@ header {
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
 }
 
-#charButton {
+.charButton {
     background-color: black;
     color: white;
 }
