--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,10 @@
         <h5>Up your skills</h5>
         <h5>Do you know your game of thrones characters?</h5>
         <h5>Click on the 'Generate' button to generate a character in the box below</h5>
+    </br>
         <!-- 'Generate' button embedded in a form. -->
         <form action="/" method="POST">
-            <button id="charButton" type="submit">Generate</button>
+            <button class="charButton" type="submit">Generate</button>
         </form>
     </div>
 </div>
@@ -42,6 +43,9 @@
         <form action="/submit" method="POST">
             <h4><span><b><label for="fact">Fact:</label></b></span></h4>
             <input type="text" id="fact" name="fact" required>
+        </br>
+        </br>
+            <button class="charButton" type="submit">Submit</button>
         </form>
     </div>
 </div>
