--- a/views/Partials/header.ejs
+++ b/views/Partials/header.ejs
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+<main>
     <header>
         <br />
         <h1>Character Challenge</h1>
