Final amendment made
Website now finished - media queries and some grammatical amendments added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,8 @@
     <div id="introTextBox">
         <h2><span><b>Fire</b></span></h2>
         <h5>Up your skills</h5>
-        <h5>Do you know your game of thrones characters?</h5>
-        <h5>Click on the 'Generate' button to generate a character in the box below</h5>
+        <h5>Do you know your Game of Thrones characters?</h5>
+        <h5>Click on the 'generate' button to generate a character in the box below./h5>
     </br>
         <!-- 'Generate' button embedded in a form. -->
         <form action="/" method="POST">
@@ -38,10 +38,9 @@
 <div id="userInputScreen">
     <h2><span><b>Unfreeze</b></span></h2>
         <h5>Your brain</h5>
-        <h5>What do you know about this character?</h5>
-        <h6>Add a fact in the box below and click the submit button.</h6>
-        <h6>Your fact will appear in the character box above.</h6>
-        <h6>If you don't know one, this is your chance to learn.  Do an online search to find out about them.</h6>
+        <h5>Do you know anything about this character?</h5>
+        <h6>Add a fact in the box below.</h6>
+        <h6>Click 'submit' and your fact will appear in the character box above.</h6>
 </br>
     <div id="userFact">
         <form action="/submit" method="POST">
