Final notes added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,6 @@
 </div>
 
 <div id="iceDiv">
-    <!-- Going to put my ice picture in here and my user comment form, and the section to show the user's comment on the screen, below it-->
 <div id="userInputScreen">
     <h2><span><b>Unfreeze</b></span></h2>
         <h5>Your brain</h5>
@@ -42,6 +41,7 @@
         <h6>Add a fact in the box below.</h6>
         <h6>Click 'submit' and your fact will appear in the character box above.</h6>
 </br>
+<!-- User fact to be submitted here, and appear above in comment box. -->
     <div id="userFact">
         <form action="/submit" method="POST">
             <h4><span><b><label for="fact">Fact:</label></b></span></h4>
