--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <h2><span><b>Fire</b></span></h2>
         <h5>Up your skills</h5>
         <h5>Do you know your Game of Thrones characters?</h5>
-        <h5>Click on the 'generate' button to generate a character in the box below./h5>
+        <h5>Click on the 'generate' button to generate a character in the box below.</h5>
     </br>
         <!-- 'Generate' button embedded in a form. -->
         <form action="/" method="POST">
